--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2021.10.8
 click==8.0.3
 colorama==0.4.4
 Flask==2.0.2
+gunicorn==20.0.4
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.3.1
 Flask-Mail==0.9.1
